# grafana_ntfy_bridge

./: Cargo.toml  LICENSE  README.md
assets/: grafana_to_ntfy.toml
assets/freebsd/rc.d/: grafana_ntfy_bridge
src/: config.rs  main.rs
