[package]
name = "grafana_ntfy_bridge"
version = "0.1.0"
edition = "2021"
authors = ["Robert David <robert.david@posteo.net>"]

[dependencies]
axum = "0.7.4"
clap = { version = "4.5.1", features = ["derive"] }
exitcode = "1.1.2"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
strip = true
lto = true
