[package]
name = "grafana_ntfy_bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robert David <robert.david@posteo.net>"]

[dependencies]
axum = { version = "0.7.4", features = ["http1", "json", "tokio", "tracing"], default-features = false }
clap = { version = "4.5.1", features = ["derive"] }
exitcode = "1.1.2"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["serde_derive"], default-features = false }
serde_json = { version = "1.0.114", default-features = false }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
toml = { version = "0.8.10", features = ["parse"], default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = "0.3.18"

[profile.release]
strip = true
lto = true
